metadata/force-app/main/default/objects/CustomName_bQErG__c/CustomName_bQErG__c.object-meta.xml
<CustomObject>
    <description>Description_DPLtM</description>
    <label>CustomLabel_RuGGR</label>
    <nameField>
        <label>CustomLabel_RuGGR</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_RuGGRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>