metadata/force-app/main/default/objects/CustomName_bQErG__c/fields/CustomField_YtAqz__c.field-meta.xml
<CustomField>
    <fullName>CustomField_YtAqz__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldbXFNx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>